# releasor

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  mise.toml  release-plz.toml  release-rust.sh
.cargo/: config.toml
.claude/commands/: pr-summary.md
.cursor/: BUGBOT.md
.cursor/skills/pr-summary/: SKILL.md
.github/: renovate.json
.github/workflows/: CI.yml  Release.yml  autofix.yml  release-plz.yml
src/: cli.rs  controller.rs  lib.rs  main.rs  output_command.rs  progress.rs  status.rs
tests/: cli_tests.rs  output_command_snapshot_tests.rs  output_command_tests.rs  progress_tests.rs  status_tests.rs
tests/snapshots/: output_command_snapshot_tests__cargo_build_output.snap  output_command_snapshot_tests__shasum_output.snap  output_command_snapshot_tests__tar_output.snap
