[package]
name = "releasor"
version = "1.3.0"
edition = "2024"
authors = ["João Lucas <joaolucasfp2001@gmail.com>"]
license = "MIT"
description = "A CLI that automates release tasks for Rust 🦀 projects, streamlining builds, .tar.gz packaging, and binary verification for a fast and consistent workflow."
readme = "README.md"
repository = "https://github.com/joaolfp/releasor"
exclude = [".github/**"]

[dependencies]
arboard = "3.6.1"
demand = "1.7.2"

[dev-dependencies]
insta = "1.43.2"
